--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
       <div class="panel">
         <h2 style="margin:0 0 10px;">Service Area</h2>
         <p style="margin:0; color:var(--muted);">
-          Based in <b style="color:var(--text);">Tampa, Florida</b> — serving Florida and the Southeast, with
-          local, regional, and long-distance freight available.
+          Based in <b style="color:var(--text);">Tampa, Florida</b> — servicing nationwide with local, regional, and long-distance freight. 
         </p>
       </div>
     </div>
